--- a/index.css
+++ b/index.css
@@ -27,69 +27,72 @@
 body {
   margin: 0;
   padding: 0;
-  background: url("../img/body-background.png");
+  background: url("./img/body-background.png");
   background-size: cover;
   animation: bgKeyframe 50s infinite;
   background-attachment: fixed;
   background-position: 50%;
 }
+
 body::after {
   content: "";
-  background: url("../img/body-background-3.png");
+  background: url("./img/body-background-3.png");
 }
+
 body::before {
   content: "";
-  background: url("../img/body-background-4.png");
+  background: url("./img/body-background-4.png");
 }
 
 .background-2 {
-  background: url("../img/body-background-2.png");
+  background: url("./img/body-background-2.png");
 }
 
 .background-3 {
-  background: url("../img/body-background-3.png");
+  background: url("./img/body-background-3.png");
 }
 
 .background-4 {
-  background: url("../img/body-background-4.png");
+  background: url("./img/body-background-4.png");
 }
 
 .background-1 {
-  background: url("../img/body-background.png");
+  background: url("./img/body-background.png");
 }
 
 @keyframes bgKeyframe {
   0% {
-    background: url("../img/body-background.png");
+    background: url("./img/body-background.png");
     background-size: cover;
     background-attachment: fixed;
     background-position: 50%;
   }
   25% {
-    background: url("../img/body-background-2.png");
+    background: url("./img/body-background-2.png");
     background-size: cover;
     background-attachment: fixed;
     background-position: 50%;
   }
   50% {
-    background: url("../img/body-background-3.png");
+    background: url("./img/body-background-3.png");
     background-size: cover;
     background-attachment: fixed;
     background-position: 50%;
   }
   75% {
-    background: url("../img/body-background-4.png");
+    background: url("./img/body-background-4.png");
     background-size: cover;
     background-attachment: fixed;
     background-position: 50%;
   }
   100% {
-    background: url("../img/body-background.png");
+    background: url("./img/body-background.png");
     background-size: cover;
     background-attachment: fixed;
     background-position: 50%;
   }
 }
+
 aside {
   display: flex;
   width: 100%;
@@ -101,18 +104,22 @@ aside {
   align-items: start;
   flex-wrap: wrap;
 }
+
 aside .profile-pic {
   width: 20%;
   border-radius: 50%;
 }
+
 aside .personal-data-wrapper {
   flex-grow: 2;
 }
+
 aside .personal-data-wrapper .profile-name {
   color: #CF6700;
   font-size: 20px;
   margin: 0px;
 }
+
 aside .personal-data-wrapper .profile-occupation {
   font-style: italic;
   margin-bottom: 25px;
@@ -129,6 +136,7 @@ aside .personal-data-wrapper .birth-place {
   font-size: 12px;
   margin-top: 0px;
 }
+
 aside nav {
   width: 100%;
   display: flex;
@@ -137,6 +145,7 @@ aside nav {
   margin-top: 15px;
   padding-bottom: 5px;
 }
+
 aside nav ul {
   list-style: none;
   padding: 0;
@@ -144,6 +153,7 @@ aside nav ul {
   display: flex;
   margin: 0px;
 }
+
 aside nav ul li {
   height: 29px;
   text-transform: uppercase;
@@ -160,12 +170,14 @@ section {
   float: left;
   background: rgba(0, 0, 0, 0.5);
 }
+
 section header {
   padding-bottom: 15px;
   border-bottom: 1px solid #ffffffb3;
   display: block;
   width: 100%;
 }
+
 section header h1 {
   text-align: center;
   color: #CF6700;
@@ -173,12 +185,14 @@ section header h1 {
   font-size: 18px;
   margin-top: 0px;
 }
+
 section header p {
   text-align: center;
   font-size: 16px;
   line-height: 1.4;
   margin-bottom: 0px;
 }
+
 section article {
   margin-top: 20px;
   padding: 15px;
@@ -188,24 +202,29 @@ section article {
   align-items: start;
   width: 100%;
 }
+
 section article .article-content {
   color: white;
   font-size: 18px;
   margin-bottom: 10px;
 }
+
 section article .article-content .article-title {
   margin-top: 0px;
   margin-bottom: 10px;
 }
+
 section article .article-content .article-date {
   color: #CF6700;
   font-size: 14px;
   font-style: italic;
   margin-bottom: 20px;
 }
+
 section article .article-content .article-body {
   font-size: 14px;
 }
+
 section article .article-img {
   width: 50%;
   margin: 15px auto 0 auto;
@@ -215,18 +234,22 @@ section article .article-img {
   aside {
     padding: 30px;
   }
+
   aside .personal-data-wrapper .profile-name {
     font-size: 28px;
     margin-top: 10px;
   }
+
   aside .personal-data-wrapper .profile-occupation {
     font-size: 24px;
     margin-top: 5px;
   }
+
   aside .personal-data-wrapper .birth-date,
-aside .personal-data-wrapper .birth-place {
+  aside .personal-data-wrapper .birth-place {
     font-size: 20px;
   }
+
   aside nav ul li {
     height: 35px;
     font-size: 18px;
@@ -235,30 +258,37 @@ aside .personal-data-wrapper .birth-place {
   section {
     padding: 30px;
   }
+
   section header .blog-title {
     font-size: 24px;
   }
+
   section header p {
     font-size: 20px;
   }
+
   section article {
     margin-top: 30px;
     padding: 30px;
   }
+
   section article .article-content .article-title {
     margin-top: 0px;
     font-size: 24px;
     margin-bottom: 10px;
   }
+
   section article .article-content .article-date {
     margin-bottom: 20px;
     font-size: 20px;
   }
+
   section article .article-content .article-body {
     font-size: 18px;
     line-height: 1.4;
   }
 }
+
 @media only screen and (min-width: 1024px) {
   aside {
     width: 20%;
@@ -268,37 +298,45 @@ aside .personal-data-wrapper .birth-place {
     background: rgba(0, 0, 0, 0.5);
     padding: 20px;
   }
+
   aside .profile-pic {
     width: 60%;
     margin: 5vh auto 0 auto;
     border-radius: 50%;
   }
+
   aside .personal-data-wrapper .profile-name {
     color: #CF6700;
     font-size: 24px;
     margin-bottom: 5px;
   }
+
   aside .personal-data-wrapper .profile-occupation,
-aside .personal-data-wrapper .birth-date,
-aside .personal-data-wrapper .birth-place {
+  aside .personal-data-wrapper .birth-date,
+  aside .personal-data-wrapper .birth-place {
     color: #ffffffb3;
     margin: 0px;
     font-size: 18px;
   }
+
   aside .personal-data-wrapper .profile-occupation {
     font-style: italic;
     margin-bottom: 25px;
   }
+
   aside nav {
     margin-top: 10vh;
     border: none;
   }
+
   aside nav ul {
     display: block;
   }
+
   aside nav ul li.active {
     color: #CF6700;
   }
+
   aside nav ul li:hover {
     border-bottom: 1px solid #A25000;
   }
@@ -311,6 +349,7 @@ aside .personal-data-wrapper .birth-place {
     height: 100vh;
     overflow-y: scroll;
   }
+
   section header {
     padding-bottom: 20px;
     border-bottom: 1px solid #ffffffb3;
@@ -320,6 +359,7 @@ aside .personal-data-wrapper .birth-place {
     min-width: 680px;
     max-width: 820px;
   }
+
   section header h1 {
     text-align: center;
     color: #CF6700;
@@ -330,6 +370,7 @@ aside .personal-data-wrapper .birth-place {
     margin-left: auto;
     margin-right: auto;
   }
+
   section header p {
     text-align: center;
     font-size: 18px;
@@ -339,6 +380,7 @@ aside .personal-data-wrapper .birth-place {
     margin-left: auto;
     margin-right: auto;
   }
+
   section article {
     margin-top: 5vh;
     min-width: 680px;
@@ -350,34 +392,40 @@ aside .personal-data-wrapper .birth-place {
     align-items: start;
     flex-direction: row;
   }
+
   section article .article-content {
     flex-grow: 2;
   }
+
   section article .article-content .article-title,
-section article .article-content .article-date,
-section article .article-content .article-body {
+  section article .article-content .article-date,
+  section article .article-content .article-body {
     width: 100%;
     text-align: left;
     margin: 0px;
   }
+
   section article .article-content .article-title {
     color: white;
     font-size: 24px;
     margin-bottom: 10px;
   }
+
   section article .article-content .article-date {
     color: #CF6700;
     font-size: 16px;
     font-style: italic;
     margin-bottom: 20px;
   }
+
   section article .article-content .article-body {
     line-height: 1.4;
   }
+
   section article .article-img {
     width: 200px;
     margin-left: 20px;
   }
 }
 
-/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=index.css.map */
